--- a/index.html
+++ b/index.html
@@ -4,133 +4,115 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>dev.finance$</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,700;1,100;1,200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,700;1,100;1,200&display=swap"
+      rel="stylesheet"
+    />
   </head>
+ 
   <body>
-      <header>
-          <img src="./assets/logo.svg" alt="Logo Dev Finance">
-      </header>
+    <header>
+      <img src="./assets/logo.svg" alt="Logo Dev Finance" />
+    </header>
 
-      <main class = "container">
-          <section id = "balance">
-            <h2 class = "sr-only">Balanço</h2>
-            <div class = "card">
-                <h3>
-                  <span>Entradas</span> 
-                  <img src="./assets/income.svg" alt="Image de entradas">
-                </h3>
-            <p>R$ 5.000,00</p>
-            </div>
-
-            <div class = "card">
-              <h3>
-                <span>Saídas</span> 
-                <img src="./assets/expense.svg" alt="Image de saídas">
-              </h3>
-            <p>R$ 2.000,00</p>
+    <main class="container">
+      <section id="balance">
+        <h2 class="sr-only">Balanço</h2>
+        <div class="card">
+          <h3>
+            <span>Entradas</span>
+            <img src="./assets/income.svg" alt="Image de entradas" />
+          </h3>
+          <p id = "incomeDisplay">R$ 5.000,00</p>
         </div>
-            <div class = "card total">
-              <h3>
-                <span>Total</span> 
-                <img src="./assets/total.svg" alt="Image de total">
-              </h3>
-                <p>R$ 3.000,00</p>
-            </div>
-            
-          </section>
 
-          <section id = "transaction">
-            <h2 class = "sr-only">Transações</h2>
-            <a href="#" onclick="Modal.open()" class="button new">+ Nova transação</a>
-            <table id = "data-table">
-              <thead>
-                <tr>
-                  <th>Descrição</th>
-                  <th>Valor</th>
-                  <th>Data</th>
-                  <th></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td class = "description">Luz</td>
-                  <td class = "expense">- R$ 500,00</td>
-                  <td class = "date">23/01/2021</td>
-                  <td>
-                    <img src="./assets/minus.svg" alt="Remover transação">
-                  </td>
-                </tr>
-                <tr>
-                  <td class = "description">Criação website</td>
-                  <td class = "income">R$ 5.000,00</td>
-                  <td class = "date">23/01/2021</td>
-                  <td>
-                    <img src="./assets/minus.svg" alt="Remover transação">
-                  </td>
-                </tr>
-                <tr>
-                  <td class = "description">Internet</td>
-                  <td class = "expense">- R$ 200,00</td>
-                  <td class = "date">23/01/2021</td>
-                  <td>
-                    <img src="./assets/minus.svg" alt="Remover transação">
-                  </td>
-                </tr>
-          </section>
+        <div class="card">
+          <h3>
+            <span>Saídas</span>
+            <img src="./assets/expense.svg" alt="Image de saídas" />
+          </h3>
+          <p id = "expenseDisplay">R$ 2.000,00</p>
+        </div>
+        <div class="card total">
+          <h3>
+            <span>Total</span>
+            <img src="./assets/total.svg" alt="Image de total" />
+          </h3>
+          <p id = "totalDisplay">R$ 3.000,00</p>
+        </div>
+      </section>
 
-          </tbody>
+      <section id="transaction">
+        <h2 class="sr-only">Transações</h2>
+        <a href="#" onclick="Modal.open()" class="button new"
+          >+ Nova transação</a
+        >
+        <table id="data-table">
+          <thead>
+            <tr>
+              <th>Descrição</th>
+              <th>Valor</th>
+              <th>Data</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody></tbody>
         </table>
+      </section>
     </main>
 
-    <div class="modal-overlay active">
+    <div class="modal-overlay">
       <div class="modal">
         <div id="form">
           <h2>Nova transação</h2>
-          <form action="">
-
+          <form action="" onsubmit = "Form.submit(event)">
             <div class="input-group">
-              <label class = "sr-only" for="description">Descrição</label>
-              <input type="text" id = "description" name = "description" placeholder="Descrição">
+              <label class="sr-only" for="description">Descrição</label>
+              <input
+                type="text"
+                id="description"
+                name="description"
+                placeholder="Descrição"
+              />
             </div>
 
             <div class="input-group">
-              <label class = "sr-only" for="amount">Valor</label>
-              <input type="number" step = "0.01" id = "amount" name = "amount" placeholder="0,00">
-              <small class="help">Use o sinal - (negativo) para despesas e , (vírgula) para casas decimais</small>
+              <label class="sr-only" for="amount">Valor</label>
+              <input
+                type="number"
+                step="0.01"
+                id="amount"
+                name="amount"
+                placeholder="0,00"
+              />
+              <small class="help"
+                >Use o sinal - (negativo) para despesas e , (vírgula) para casas
+                decimais</small
+              >
             </div>
 
             <div class="input-group">
-              <label class = "sr-only" for="date">Data</label>
-              <input type="date" id = "date" name = "date">
+              <label class="sr-only" for="date">Data</label>
+              <input type="date" id="date" name="date" />
             </div>
 
             <div class="input-group actions">
-              <a href="#" onclick="Modal.close()" class="button cancel">Cancelar</a>
+              <a href="#" onclick="Modal.close()" class="button cancel"
+                >Cancelar</a
+              >
               <button>Salvar</button>
             </div>
           </form>
         </div>
       </div>
     </div>
-    
-        <footer>
-          <p>dev.finance$</p>
-        </footer>
 
-        <script>
-          const Modal = {
-            open() {
-              document.querySelector('.modal-overlay')
-              .classList.add('active')
-            },
-            close() {              
-              document.querySelector('.modal-overlay')
-              .classList.remove('active')
-            }
-          }
+    <script src="scripts.js"></script>
 
-        </script>
+    <footer>
+      <p>dev.finance$</p>
+    </footer>
   </body>
 </html>
